# graphical-turing-machine-sim

./: .clang-format  .gitignore  Cargo.toml  a.ilk  build.bat  build.c  build.h  build.old  build.sh  build_all  build_all.ilk  build_all.rdi  build_this  gtms.ilk  project.4coder  project.org
c++_example/include/: InputUnit.cpp  InputUnit.h  State.cpp  State.h  Tape.cpp  Tape.hpp  TuringMachine.cpp  TuringMachine.hpp  Utilities.h  VariadicTable.hpp
c++_example/machines/: Ejemplo_MT.txt  MT1.txt  MT2.txt
c++_example/src/: main.cpp
include/vulkan/: vk_platform.h
shaders/: base_frag.frag  base_vert.vert  build.bat
src/: a.c  kb_text_shape.h  linux.c  main.c  main.rs  win32.c
src/base/: base.c  base.h  memory.h
src/impls/: memory.c
src/include/: base.h  lh_vulkan.c  lh_vulkan.h  linux.h  memory.h  win32.h
src/include/base/: base.h  base_include.h  file_manager.c  file_manager.h  memory.c  memory.h
src/platform/: platform.c  platform.h
src/platform/linux/: linux.h
src/platform/linux/wayland/: wayland.c  wayland.h  xdg-shell-protocol.h
src/platform/win32/: win32.h
src/renderer/: renderer.h
src/renderer/api/software/: software_renderer.c
src/renderer/api/vulkan/: lhvk.c  lhvk.h
src/shaders/: shader.vert  vert.spv
src/vulkan/: app.rs  color.rs  mod.rs  raw.rs  vertex.rs
