[package]
name = "graphical-turing-machine-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
log = "0.4.21"
vulkanalia = { version = "=0.23.0", features = [
    "libloading",
    "window",
    "provisional",
] }
winit = "0.29.15"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { features = ["log"] }
